# snek

./: .gitignore  CLI_TOOL_SPEC.md  Cargo.toml  EXTENSION_INTEGRATION_GUIDE.md  IMPLEMENTATION_STATUS.md  INTEGRATION_GUIDE.md  LICENSE  LSP_IMPLEMENTATION_PLAN.md  README.md  SNEK_FOLDER_GUIDE.md  build_and_package.sh  quick-start.sh  snek_ecosystem_overview.md  test_lsp.sh
specs/001-snek-lsp/: spec.md
src/: document_store.rs  lib.rs  main.rs  model.rs  session_io.rs  snapshot.rs  watcher.rs
src/lsp/: backend.rs  server.rs
templates/commands/: snek.blame.md  snek.callers.md  snek.commit.draft.md  snek.commits.md  snek.complexity.md  snek.context.add.md  snek.context.clear.md  snek.context.read.md  snek.context.remove.md  snek.context.show.md  snek.deps.md  snek.diff.md  snek.doc.file.md  snek.doc.function.md  snek.explain.md  snek.fill.md  snek.outline.md  snek.refactor.extract.md  snek.refactor.rename.md  snek.refs.md  snek.session.clone.md  snek.session.info.md  snek.session.list.md  snek.session.new.md  snek.session.switch.md  snek.share.md  snek.status.md  snek.test.generate.md  snek.todo.md
templates/scripts/: add-code-snippet.sh  add-context-file.sh  clear-context.sh  clone-session.sh  get-active-session.sh  get-file-outline.sh  get-git-diff.sh  get-git-status.sh  get-imports.sh  get-recent-commits.sh  list-context.sh  list-sessions.sh  new-session.sh  remove-code-snippet.sh  remove-context-file.sh  snek-parse.sh  switch-session.sh
tests/: document_store_test.rs  session_io_test.rs
tests/unit/: session_io_test.rs
(+1 files in other folders)
