[package]
name = "snek"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "Snek Language Server - A Language Server Protocol implementation"

[dependencies]
anyhow = "1.0"
pocketflow_rs = "0.1.0"
tower-lsp = "0.20.0"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
