[package]
name = "snek"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "Snek Language Server - A Language Server Protocol implementation"

[dependencies]
anyhow = "1.0"
tower-lsp = "0.20.0"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "native-tls-vendored"] }
notify = "6"
arc-swap = "1"
chrono = "0.4"
url = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
